debug-output3/build.log
[1;31m> [1;3;39mMaking all in Tweak…[m
[1;31m> [1;3;39mMaking all for tweak Axon…[m
[0;31m==> [1;39mPreprocessing Tweak.xm…[m
[0;31m==> [1;39mPreprocessing Tweak.xm…[m
[0;32m==> [1;39mCompiling AXNRequestWrapper.m (arm64e)…[m
[0;32m==> [1;39mCompiling AXNManager.m (arm64e)…[m
[0;32m==> [1;39mCompiling AXNView.m (arm64e)…[m
[0;32m==> [1;39mCompiling AXNAppCell.m (arm64)…[m
[0;32m==> [1;39mCompiling AXNRequestWrapper.m (arm64)…[m
[0;32m==> [1;39mCompiling AXNAppCell.m (arm64e)…[m
[0;32m==> [1;39mCompiling AXNView.m (arm64)…[m
[0;32m==> [1;39mCompiling AXNManager.m (arm64)…[m
[0;32m==> [1;39mCompiling Tweak.xm (arm64e)…[m
[0;33m==> [1;39mLinking tweak Axon (arm64e)…[m
ld: warning: object file /home/runner/work/axonnn/axonnn/.theos/obj/arm64e/Tweak.xm.22ee3ea7.o was built with an incompatible arm64e ABI compiler
ld: warning: object file /home/runner/work/axonnn/axonnn/.theos/obj/arm64e/AXNAppCell.m.22ee3ea7.o was built with an incompatible arm64e ABI compiler
ld: warning: object file /home/runner/work/axonnn/axonnn/.theos/obj/arm64e/AXNManager.m.22ee3ea7.o was built with an incompatible arm64e ABI compiler
ld: warning: object file /home/runner/work/axonnn/axonnn/.theos/obj/arm64e/AXNRequestWrapper.m.22ee3ea7.o was built with an incompatible arm64e ABI compiler
ld: warning: object file /home/runner/work/axonnn/axonnn/.theos/obj/arm64e/AXNView.m.22ee3ea7.o was built with an incompatible arm64e ABI compiler
[0;34m==> [1;39mGenerating debug symbols for Axon…[m
[0;34m==> [1;39mStripping Axon (arm64e)…[m
[0;32m==> [1;39mCompiling Tweak.xm (arm64)…[m
[0;33m==> [1;39mLinking tweak Axon (arm64)…[m
[0;34m==> [1;39mGenerating debug symbols for Axon…[m
[0;34m==> [1;39mStripping Axon (arm64)…[m
[0;34m==> [1;39mMerging tweak Axon…[m
[0;34m==> [1;39mSigning Axon…[m
[1;31m> [1;3;39mMaking all in Prefs…[m
[1;31m> [1;3;39mMaking all for bundle AxonPrefs…[m
[0;35m==> [1;39mCopying resource directories into the bundle wrapper…[m
[0;32m==> [1;39mCompiling AXNAppearanceSettings.m (arm64e)…[m
[0;32m==> [1;39mCompiling Preferences.m (arm64)…[m
[0;32m==> [1;39mCompiling Preferences.m (arm64e)…[m
[0;32m==> [1;39mCompiling AXNListItemsController.m (arm64e)…[m
[0;32m==> [1;39mCompiling AXNDebugController.m (arm64e)…[m
While building module 'AppList' imported from AXNDebugController.m:1:
In file included from <module-includes>:1:
In file included from /home/runner/theos/vendor/include/AppList/AppList.h:1:
[1m/home/runner/theos/vendor/include/AppList/ALApplicationList.h:13:2: [0m[0;1;31merror: [0m[1m'OSSpinLock' is deprecated: first deprecated in iOS 10.0 - Use os_unfair_lock() from <os/lock.h> instead [-Werror,-Wdeprecated-declarations][0m
        OSSpinLock spinLock;
[0;1;32m        ^
[0m[1m/home/runner/theos/sdks/iPhoneOS16.5.sdk/usr/include/libkern/OSSpinLockDeprecated.h:79:17: [0m[0;1;30mnote: [0m'OSSpinLock' has been explicitly marked deprecated here[0m
typedef int32_t OSSpinLock OSSPINLOCK_DEPRECATED_REPLACE_WITH(os_unfair_lock);
[0;1;32m                ^
[0m[1mAXNDebugController.m:1:9: [0m[0;1;31mfatal error: [0m[1mcould not build module 'AppList'[0m
#import <AppList/AppList.h>
[0;1;32m ~~~~~~~^
[0m2 errors generated.
make[4]: *** [/home/runner/theos/makefiles/instance/rules.mk:305: /home/runner/work/axonnn/axonnn/.theos/obj/arm64e/AXNDebugController.m.d16e3c9b.o] Error 1
make[4]: *** Waiting for unfinished jobs....
[0;32m==> [1;39mCompiling AXNAppearanceSettings.m (arm64)…[m
[0;32m==> [1;39mCompiling AXNListItemsController.m (arm64)…[m
[0;32m==> [1;39mCompiling AXNLocationController.m (arm64e)…[m
While building module 'AppList' imported from AXNLocationController.m:1:
In file included from <module-includes>:1:
In file included from /home/runner/theos/vendor/include/AppList/AppList.h:1:
[1m/home/runner/theos/vendor/include/AppList/ALApplicationList.h:13:2: [0m[0;1;31merror: [0m[1m'OSSpinLock' is deprecated: first deprecated in iOS 10.0 - Use os_unfair_lock() from <os/lock.h> instead [-Werror,-Wdeprecated-declarations][0m
        OSSpinLock spinLock;
[0;1;32m        ^
[0m[1m/home/runner/theos/sdks/iPhoneOS16.5.sdk/usr/include/libkern/OSSpinLockDeprecated.h:79:17: [0m[0;1;30mnote: [0m'OSSpinLock' has been explicitly marked deprecated here[0m
typedef int32_t OSSpinLock OSSPINLOCK_DEPRECATED_REPLACE_WITH(os_unfair_lock);
[0;1;32m                ^
[0m[1mAXNLocationController.m:1:9: [0m[0;1;31mfatal error: [0m[1mcould not build module 'AppList'[0m
#import <AppList/AppList.h>
[0;1;32m ~~~~~~~^
[0m2 errors generated.
make[4]: *** [/home/runner/theos/makefiles/instance/rules.mk:305: /home/runner/work/axonnn/axonnn/.theos/obj/arm64e/AXNLocationController.m.d16e3c9b.o] Error 1
make[3]: *** [/home/runner/theos/makefiles/instance/bundle.mk:37: /home/runner/work/axonnn/axonnn/.theos/obj/arm64e/AxonPrefs.bundle/AxonPrefs] Error 2
make[3]: *** Waiting for unfinished jobs....
[0;32m==> [1;39mCompiling AXNDebugController.m (arm64)…[m
While building module 'AppList' imported from AXNDebugController.m:1:
In file included from <module-includes>:1:
In file included from /home/runner/theos/vendor/include/AppList/AppList.h:1:
[1m/home/runner/theos/vendor/include/AppList/ALApplicationList.h:13:2: [0m[0;1;31merror: [0m[1m'OSSpinLock' is deprecated: first deprecated in iOS 10.0 - Use os_unfair_lock() from <os/lock.h> instead [-Werror,-Wdeprecated-declarations][0m
        OSSpinLock spinLock;
[0;1;32m        ^
[0m[1m/home/runner/theos/sdks/iPhoneOS16.5.sdk/usr/include/libkern/OSSpinLockDeprecated.h:79:17: [0m[0;1;30mnote: [0m'OSSpinLock' has been explicitly marked deprecated here[0m
typedef int32_t OSSpinLock OSSPINLOCK_DEPRECATED_REPLACE_WITH(os_unfair_lock);
[0;1;32m                ^
[0m[1mAXNDebugController.m:1:9: [0m[0;1;31mfatal error: [0m[1mcould not build module 'AppList'[0m
#import <AppList/AppList.h>
[0;1;32m ~~~~~~~^
[0m2 errors generated.
make[4]: *** [/home/runner/theos/makefiles/instance/rules.mk:304: /home/runner/work/axonnn/axonnn/.theos/obj/arm64/AXNDebugController.m.46aa5cd5.o] Error 1
make[4]: *** Waiting for unfinished jobs....
[0;32m==> [1;39mCompiling AXNLocationController.m (arm64)…[m
While building module 'AppList' imported from AXNLocationController.m:1:
In file included from <module-includes>:1:
In file included from /home/runner/theos/vendor/include/AppList/AppList.h:1:
[1m/home/runner/theos/vendor/include/AppList/ALApplicationList.h:13:2: [0m[0;1;31merror: [0m[1m'OSSpinLock' is deprecated: first deprecated in iOS 10.0 - Use os_unfair_lock() from <os/lock.h> instead [-Werror,-Wdeprecated-declarations][0m
        OSSpinLock spinLock;
[0;1;32m        ^
[0m[1m/home/runner/theos/sdks/iPhoneOS16.5.sdk/usr/include/libkern/OSSpinLockDeprecated.h:79:17: [0m[0;1;30mnote: [0m'OSSpinLock' has been explicitly marked deprecated here[0m
typedef int32_t OSSpinLock OSSPINLOCK_DEPRECATED_REPLACE_WITH(os_unfair_lock);
[0;1;32m                ^
[0m[1mAXNLocationController.m:1:9: [0m[0;1;31mfatal error: [0m[1mcould not build module 'AppList'[0m
#import <AppList/AppList.h>
[0;1;32m ~~~~~~~^
[0m2 errors generated.
make[4]: *** [/home/runner/theos/makefiles/instance/rules.mk:304: /home/runner/work/axonnn/axonnn/.theos/obj/arm64/AXNLocationController.m.46aa5cd5.o] Error 1
make[3]: *** [/home/runner/theos/makefiles/instance/bundle.mk:37: /home/runner/work/axonnn/axonnn/.theos/obj/arm64/AxonPrefs.bundle/AxonPrefs] Error 2
make[2]: *** [/home/runner/theos/makefiles/instance/bundle.mk:26: internal-bundle-all_] Error 2
make[1]: *** [/home/runner/theos/makefiles/master/rules.mk:146: AxonPrefs.all.bundle.variables] Error 2
make: *** [/home/runner/theos/makefiles/master/aggregate.mk:12: internal-all] Error 2
